--- a/index.html
+++ b/index.html
@@ -73,20 +73,12 @@
         <button id="backBtn" onclick="smartBack()">⬅️ رجوع</button>
         <button onclick="goHome()">🏠 الصفحة الرئيسية</button>
     </div>
-
-
-
-
-
     <!-- صفحة تسجيل الدخول -->
     <div id="loginPage" class="login-container">
 
         <h1>منصة التمساحية التعليمية</h1>
-<p style="color:whit">المرحلة الإعدادية – المنهج المصري</p>
-
-
-
-        <input id="email" type="text" placeholder="البريد الإلكتروني">
+<p style="color:white">المرحلة الإعدادية – المنهج المصري</p>
+   <input id="email" type="text" placeholder="البريد الإلكتروني">
         <input id="password" type="password" placeholder="كلمة المرور">
 
         <!-- الأزرار داخل صفحة الدخول -->
@@ -1544,6 +1536,7 @@ async function editStudent(studentEmail) {
 
 </body>
 </html>
+
 
 
 
