--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <div class="nav-title">
     منصة التمساحية التعليمية
 </div>
-
+  <div id="navUser" class="nav-user"></div>
+            <button id="darkToggle" onclick="toggleDarkMode()">🌙</button>
           
         </nav>
         <button id="installBtn" class="install-btn hidden">
@@ -1534,6 +1535,7 @@ async function editStudent(studentEmail) {
 
 </body>
 </html>
+
 
 
 
