--- a/index.html
+++ b/index.html
@@ -1589,10 +1589,24 @@ if (installBtn) {
   });
 }
 </script>
+<!-- Install Modal -->
+<div id="installModal" class="install-modal hidden">
+  <div class="install-box">
+    <h3>📚 منصة التمساحية</h3>
+    <p>
+      ✔️ دروس منظمة للمرحلة الإعدادية<br>
+      ✔️ أسرع من المتصفح<br>
+      ✔️ تعمل بدون إنترنت
+    </p>
+    <button id="confirmInstall">📲 تثبيت التطبيق</button>
+    <button id="closeInstall">لاحقًا</button>
+  </div>
+</div>
 
 
 </body>
 </html>
+
 
 
 
