--- a/index.html
+++ b/index.html
@@ -1595,8 +1595,15 @@ async function installApp() {
 }
 </script>
 
+function toggleDarkMode() {
+  document.body.classList.toggle("dark-mode");
+}
 
+<button onclick="toggleDarkMode()" class="dark-btn">
+  🌙 الوضع الليلي
+</button>
 
 </body>
 </html>
+
 
