--- a/index.html
+++ b/index.html
@@ -1080,37 +1080,46 @@ async function renderStudents() {
           <td>${student.email || "-"}</td>
           <td>${status}</td>
           <td>${student.grade || "-"}</td>
-          <td class="actions-cell" style="display:flex; gap:6px; justify-content:center; flex-wrap:wrap;">
-  ${
-    // 👑 الأدمن
-    currentUser?.role === "ADMIN"
-      ? `
-        <button class="custom-btn"
-          onclick="editStudent('${student.email}')">
-          ✏️ تعديل
-        </button>
+          <td class="actions-cell">
+  <div class="actions-wrapper">
 
-        <button class="custom-btn danger"
-          onclick="deleteUser('${doc.id}', 'students')">
-          🗑 حذف
-        </button>
+    ${
+      // 👑 الأدمن: تعديل + حذف فقط
+      currentUser?.role === "ADMIN"
+        ? `
+          <button class="custom-btn"
+            onclick="editStudent('${student.email}')">
+            ✏️ تعديل
+          </button>
 
-        ${
-          !student.approved
-            ? `
-              <button class="custom-btn"
-                onclick="setApprove('${doc.id}', true)">
-                ✅ موافقة
-              </button>
+          <button class="custom-btn danger"
+            onclick="deleteUser('${doc.id}', 'students')">
+            🗑 حذف
+          </button>
+        `
+        : ""
+    }
 
-              <button class="custom-btn danger"
-                onclick="rejectStudent('${doc.id}')">
-                ❌ رفض
-              </button>
-            `
-            : ""
-        }
-      `
+    ${
+      // 👤 المشرف: موافقة + رفض فقط (إذا كان غير مفعل)
+      currentUser?.role === "SUPERVISOR" && !student.approved
+        ? `
+          <button class="custom-btn"
+            onclick="setApprove('${doc.id}', true)">
+            ✅ موافقة
+          </button>
+
+          <button class="custom-btn danger"
+            onclick="rejectStudent('${doc.id}')">
+            ❌ رفض
+          </button>
+        `
+        : ""
+    }
+
+  </div>
+</td>
+
       // 👤 المشرف (موافقة فقط)
       : currentUser?.role === "SUPERVISOR" && !student.approved
         ? `
@@ -1623,6 +1632,7 @@ async function installApp() {
 
 </body>
 </html>
+
 
 
 
